--- a/styles/style.css
+++ b/styles/style.css
@@ -19,13 +19,17 @@ body {
   transition: opacity 0.3s ease;
   cursor: pointer; 
 }
+.togawa {
+  width: 250px;
+  transform: translate(225px, 100px);
+}
 .ghost{
   width: 300px;
-  transform: translate(500px, 250px);
+  transform: translate(300px, 200px);
   transition: opacity 0.3s ease;
   cursor: pointer; 
 }
 
-.glitch:hover, .ghost:hover, .machina:hover {
+.glitch:hover, .ghost:hover, .machina:hover, .togawa:hover {
   opacity: 0.8;  
 }
