--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,8 @@ body {
 .togawa {
   width: 250px;
   transform: translate(225px, 100px);
+  border-radius: 50%;
+  border: 4px solid pink;
 }
 .ghost{
   width: 300px;
