--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/images/cloud_atlas.jpg');
+    background-image: url('images/cloud_atlas.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
