--- a/styles/style.css
+++ b/styles/style.css
@@ -11,32 +11,106 @@ body {
   }
 h1 {
   font-family: 'Silkscreen', sans-serif;
+  font-weight: 400;
   color: white;
 }
+
+.home {
+  position: relative;
+  width: 100%;
+  height: 800px;
+  margin: 0 auto;
+}
+
+.machina,
+.glitch,
+.togawa,
+.ghost {
+  position: absolute;
+  height: auto;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  cursor: pointer;
+}
+
 .machina {
-    margin-left: 50px;   
-    transform: translate(800px, 10px);
-    width: 250px;
-  }
+  width: 400px;
+  top: 50px;
+  left: 50px;
+  transform: rotate(2deg);
+}
+
 .glitch {
   width: 200px;
-  transform: translate(150px, 40px);
+  top: 40px;
+  left: 500px;
+  transform: rotate(5deg);
+}
+
+.togawa {
+  width: 200px;
+  top: 50px;
+  left: 975px;
+  border-radius: 50%;
+  border: 4px solid pink;
+}
+
+.ghost {
+  width: 300px;
+  top: 300px;
+  left: 600px;
+  transform: rotate(-6deg);
+}
+
+.glitch:hover,
+.ghost:hover,
+.machina:hover,
+.togawa:hover {
+  opacity: 0.8;  
+  transform: scale(1.05);
+}
+
+
+
+/* .home{
+  position: relative;
+  width: 100%;
+  height: 600px; 
+  margin: 0 auto;
+}
+.machina {
+  position: absolute;
+  width: 200px;
+  height: auto;
+  transition: transform 0.3s ease;
+  top: 100px;
+  left: 250px;
+  transform: rotate(2deg);
+
+}
+.glitch {
+  top: 20px;
+  left: 30px;
+  transform: rotate(-5deg);
   transition: opacity 0.3s ease;
   cursor: pointer; 
+  max-width: 25%;
+  height: auto;
 }
 .togawa {
-  width: 250px;
-  transform: translate(225px, 100px);
+  top: 300px;
+  left: 50px;
+  max-width: 40%;
+  height: auto;
   border-radius: 50%;
   border: 4px solid pink;
 }
 .ghost{
-  width: 300px;
-  transform: translate(300px, 200px);
+  max-width: 50%;
+  height: auto;
   transition: opacity 0.3s ease;
   cursor: pointer; 
 }
 
 .glitch:hover, .ghost:hover, .machina:hover, .togawa:hover {
   opacity: 0.8;  
-}
+} */
