--- a/styles/style.css
+++ b/styles/style.css
@@ -140,6 +140,15 @@ figure.machina{
   left: 40px;
   width: 200px;
 }
+figure.glitch{
+  position: absolute;
+  transform: rotate(5deg);
+}
+
+figure.ghost{
+  position: absolute;
+  transform: rotate(-5deg);
+}
 figure.togawa img{
   width: 200px;
   top: 50px;
@@ -148,7 +157,21 @@ figure.togawa img{
   border: 4px solid pink;
 }
 
-figure.togawa figcaption, figure.machina figcaption {
+figure.glitch img{
+  width: 200px;
+  top: 40px;
+  left: 500px;
+  transform: rotate(5deg);
+}
+
+figure.ghost img{
+  width: 300px;
+  top: 300px;
+  left: 600px;
+  transform: rotate(-5deg);
+}
+
+figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, figure.ghost figcaption {
   position: absolute;
   bottom: 20px;
   left: 0;
