--- a/styles/style.css
+++ b/styles/style.css
@@ -16,11 +16,14 @@ body{
     background-repeat: no-repeat;
   }
 header {
-  background-color: rgba(0, 0, 0, 0.6);
-    padding-top: 15px;
-    text-align: center;
-    color: white;
+  /* background-color: rgba(0, 0, 0, 0.6); */
+  padding-top: 15px;
+  text-align: center;
+  color: white;
   }
+header.intro-header {
+  background-color: none;
+}
 
 nav ul {
     display: flex;
@@ -153,8 +156,6 @@ figure.togawa img{
   width: 200px;
   top: 50px;
   left: 975px;
-  border-radius: 50%;
-  border: 4px solid pink;
 }
 
 figure.glitch img{
