--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 body{
-    background-image: url('../images/cloud_atlas.jpg');
+    /* background-image: url('../images/cloud_atlas.jpg'); */
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
@@ -8,12 +8,6 @@ body{
     margin: 0;
     font-family: sans-serif;
     color: white; 
-  }
-  body.intro-page {
-    background-image: none;
-    background-color: lightblue;
-    background-position: center;
-    background-repeat: no-repeat;
   }
 header {
   /* background-color: rgba(0, 0, 0, 0.6); */
@@ -225,6 +219,14 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
   width: 300px;
 }
 
+.about-text{
+  font-family: serif;
+  margin-left: 50px;
+  margin-right: 50px;
+  max-width: 75%;
+  color: black;
+}
+
 footer {
   text-align: center;
   padding: 2px;
@@ -235,46 +237,3 @@ footer {
 
 
 
-/* .home{
-  position: relative;
-  width: 100%;
-  height: 600px; 
-  margin: 0 auto;
-}
-.machina {
-  position: absolute;
-  width: 200px;
-  height: auto;
-  transition: transform 0.3s ease;
-  top: 100px;
-  left: 250px;
-  transform: rotate(2deg);
-
-}
-.glitch {
-  top: 20px;
-  left: 30px;
-  transform: rotate(-5deg);
-  transition: opacity 0.3s ease;
-  cursor: pointer; 
-  max-width: 25%;
-  height: auto;
-}
-.togawa {
-  top: 300px;
-  left: 50px;
-  max-width: 40%;
-  height: auto;
-  border-radius: 50%;
-  border: 4px solid pink;
-}
-.ghost{
-  max-width: 50%;
-  height: auto;
-  transition: opacity 0.3s ease;
-  cursor: pointer; 
-}
-
-.glitch:hover, .ghost:hover, .machina:hover, .togawa:hover {
-  opacity: 0.8;  
-} */
