--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 body{
     /* background-image: url('../images/cloud_atlas.jpg'); */
     background-size: cover;
@@ -204,12 +205,16 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
   align-items: center;
 }
 .textbox{
+  font-family: 'Times New Roman', serif; 
+  font-size: 18px;
   display: flex;
   flex-direction: column;
-  background-color: black;
+  background-color: white;
+  color: black;
   padding: 20px;
   margin-left: 20%;
   margin-right: 20%;
+  margin-bottom: 20px;
 }
 
 .machina2 {
