--- a/styles/style.css
+++ b/styles/style.css
@@ -201,27 +201,33 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
 
 .intro-all{
   display: flex;
+  align-items: flex-start;
+  gap: 15px;
+}
+.intro-pics{
+  display: flex; 
   flex-direction: column;
-  align-items: center;
+  margin-left: 10px;
+  align-items: flex-start;
 }
 .textbox{
   font-family: 'Times New Roman', serif; 
   font-size: 18px;
-  display: flex;
-  flex-direction: column;
   background-color: white;
   color: black;
   padding: 20px;
-  margin-left: 20%;
-  margin-right: 20%;
+  max-width: 75%;
   margin-bottom: 20px;
+  margin-right: 15px;
+  align-items: end;
+  border-style: outset;
 }
 
-.machina2 {
+.machina2, .haraway {
   display: block;
   margin: auto;
   margin-bottom: 20px;
-  width: 300px;
+  width: 400px;
 }
 
 .about-text{
@@ -230,6 +236,12 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
   margin-right: 50px;
   max-width: 75%;
   color: black;
+}
+
+#BADDIE 
+.baddie {
+  display: block;
+  width: 5px;
 }
 
 footer {
