--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 body{
-    /* background-image: url('../images/cloud_atlas.jpg'); */
+    background-image: url('../images/cloud_atlas.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
