--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,11 @@ header.intro-header {
   background-color: none;
 }
 
+nav {
+  position: sticky;
+  top: 0;
+  margin-top: 20px;
+}
 nav ul {
     display: flex;
     flex-direction: row;
@@ -56,6 +61,13 @@ nav ul li a {
 nav ul li a:hover {
   color: blue;
 }
+a:link {
+  color:  magenta;
+}
+/* a:hover {
+  font-style: italic;
+  font-weight: bold;
+} */
 h1{
   font-family: 'Jersey 10', sans-serif;
   font-weight: 400;
@@ -219,6 +231,7 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
   margin-left: 10px;
   align-items: flex-start;
 }
+
 .textbox{
   font-family: 'Times New Roman', serif; 
   font-size: 18px;
@@ -232,6 +245,10 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
   border-style: outset;
 }
 
+.quote{
+  font-style: italic;
+}
+
 .machina2, .haraway {
   display: block;
   margin: auto;
@@ -241,10 +258,11 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
 
 .about-text{
   font-family: serif;
-  margin-left: 50px;
-  margin-right: 50px;
-  max-width: 75%;
+  line-height: 1.15;
+  margin-left: 100px;
+  margin-right: 25%;
   color: black;
+  font-size: 18px;
 }
 
 /* BADDIE STYLES */
