--- a/styles/style.css
+++ b/styles/style.css
@@ -61,8 +61,17 @@ nav ul li a {
 nav ul li a:hover {
   color: blue;
 }
-a:link {
+li {
+  list-style: none;
+}
+/* a:link {
   color:  magenta;
+} */
+.fig {
+  font-size: 14px;
+  color: #ffffff;
+  font-style: italic;
+  margin-top: 0px;
 }
 /* a:hover {
   font-style: italic;
@@ -223,13 +232,17 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
 .intro-all{
   display: flex;
   align-items: flex-start;
-  gap: 15px;
+  /* gap: 15px; */
 }
 .intro-pics{
   display: flex; 
   flex-direction: column;
   margin-left: 10px;
   align-items: flex-start;
+}
+.guy {
+  max-width: 250px;
+  margin-right: 15px;
 }
 
 .textbox{
@@ -240,7 +253,7 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
   padding: 20px;
   max-width: 75%;
   margin-bottom: 20px;
-  margin-right: 15px;
+  margin-right: 10px;
   align-items: end;
   border-style: outset;
 }
@@ -252,7 +265,7 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
 .machina2, .haraway {
   display: block;
   margin: auto;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   width: 400px;
 }
 
