--- a/styles/style.css
+++ b/styles/style.css
@@ -291,6 +291,21 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
   border-style: outset;   
   line-height: 1.5;
 }
+.textbox3{
+  font-family: 'Times New Roman', serif; 
+  font-size: 16px;
+  background-color: rgb(212, 234, 255);
+  color: black;
+  padding: 20px;
+  max-width: 65%;
+  margin-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top:15px;
+  align-items: end;
+  border-style: outset;   
+  line-height: 1.5;
+}
 .block {
   margin-left: 2em;
 }
@@ -413,10 +428,9 @@ button{
   background-color: rgba(77, 245, 155, 0.717);
   color: rgb(0, 0, 0);
   padding: 20px;
-  max-height: 300px;
+  height: 425px;
   width: 400px;
   margin-top: 10px;
-  margin-bottom: 10px;
   border-style: dashed;
   border-width: 5px;
   border-color: white;
@@ -429,10 +443,9 @@ button{
   background-color: rgba(77, 200, 245, 0.717);
   color: rgb(0, 0, 0);
   padding: 20px;
-  height: 300px;
+  height: 425px;
   width: 400px;
   margin-top: 10px;
-  margin-bottom: 10px;
   border-style: dashed;
   border-left: none;
   border-width: 5px;
@@ -445,8 +458,7 @@ button{
   font-size: 18px;
   background-color: rgb(29, 60, 198);
   color: rgb(252, 118, 228);
-  max-height: 500px;
-  margin-top: 10px;
+  max-height: 457px;
   align-self: flex-end;
   padding-left: 20px;
   padding-right: 20px;
@@ -478,13 +490,25 @@ right {
 }
 /* Theory */
 .soft_science_div{
-  margin-left: none;
+  display: flex;
+  align-items: center;
 }
 .soft_science {
-  max-width: 40%;
+  background-color: rgb(0, 0, 0);
+  flex: 1;
+  max-width: 300px;
   margin-left: 0;
-  padding: 0;
+  margin-right: 0;
+  padding: 10px;
   margin-bottom: 5px;
+}
+.textbox4{
+  flex: 1;
+  background-color: white;
+  color: black;
+  margin-right: 50px;
+  margin-left: 0;
+  padding: 10px;
 }
 footer {
   text-align: center;
