--- a/styles/style.css
+++ b/styles/style.css
@@ -291,21 +291,7 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
   border-style: outset;   
   line-height: 1.5;
 }
-.textbox3{
-  font-family: 'Times New Roman', serif; 
-  font-size: 16px;
-  background-color: rgb(212, 234, 255);
-  color: black;
-  padding: 20px;
-  max-width: 65%;
-  margin-bottom: 20px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top:15px;
-  align-items: end;
-  border-style: outset;   
-  line-height: 1.5;
-}
+
 .block {
   margin-left: 2em;
 }
@@ -394,6 +380,7 @@ button{
 }
 .ad-img{
   max-width: 220px;
+  border-radius: 60%;
 }
 .ad_head{
   text-shadow: 2px 2px 5px rgb(243, 122, 122);
@@ -493,14 +480,30 @@ right {
   display: flex;
   align-items: center;
 }
+.r_u_AI{
+  max-width: 100%;
+}
 .soft_science {
-  background-color: rgb(0, 0, 0);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  border: solid;
+  border-width: 5px;
   flex: 1;
   max-width: 300px;
   margin-left: 0;
   margin-right: 0;
-  padding: 10px;
   margin-bottom: 5px;
+}
+.textbox3{
+  background-color: rgb(251, 224, 248);
+  font-size: 16px;
+  max-width: 100%;
+  padding: 10px;
+  color: black;
+  font-family: Helvetica, sans-serif;
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgb(0, 51, 255);
+  border-style: groove;
 }
 .textbox4{
   flex: 1;
@@ -509,6 +512,7 @@ right {
   margin-right: 50px;
   margin-left: 0;
   padding: 10px;
+  height: 400px;
 }
 footer {
   text-align: center;
