--- a/styles/style.css
+++ b/styles/style.css
@@ -314,7 +314,7 @@ figure.togawa figcaption, figure.machina figcaption, figure.glitch figcaption, f
 .about-text{
   font-family: serif;
   line-height: 1.15;
-  margin-left: 100px;
+  margin-left: 95px;
   margin-right: 25%;
   color: black;
   font-size: 18px;
@@ -528,12 +528,16 @@ right {
 }
 .textbox4{
   flex: 1;
-  background-color: white;
+  background-color: rgb(251, 225, 240);
+  font-family:'Times New Roman', Times, serif;
+  font-size: 18px;
+  line-height: 1.15;
   color: black;
   margin-right: 50px;
   margin-left: 0;
-  padding: 10px;
-  height: 400px;
+  padding: 20px;
+  max-height: 400px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 footer {
   text-align: center;
